--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 Hello World
+<h1>My Title</h1>
+<h2>My subtitle</h2>
+<p>My paragraph text text text text text text text text text text text text text text text text text text text text text text text text text text </p>
+<body>
+	<form>
+		Username: <input type="text"/><br/>
+		Password: <input type="password"/><br/>
+		Gender: <input type="radio" name="g"/>Male
+				<input type="radio" name="g"/>Female</br>
+		I am over 18: <input type="checkbox"/><br/>
+		Submit information: <input type=""
+
+	</form>
+</body>
+
+<br/>
+<br/>
+<br/>
+
+<TABLE border="1" width="100%">
+
+	<thead>
+		<th>Name</th>
+		<th>Age</th>
+		<th>Gender</th>
+	</thead>
+
+	<tr>
+		<td>Kate</td>
+		<td>18</td>
+		<td>Female</td>
+	</tr>
+</TABLE>
